--- a/PositionIn/Onboarding.storyboard
+++ b/PositionIn/Onboarding.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
-        <!--Phone Number Navigation Controller-->
+        <!--Onboarding Navigation Controller-->
         <scene sceneID="aDR-uw-Ycf">
             <objects>
-                <navigationController id="EQ9-4A-h3E" customClass="PhoneNumberNavigationController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="EQ9-4A-h3E" customClass="OnboardingNavigationController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="RW0-jc-ju8">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -81,6 +81,192 @@
             </objects>
             <point key="canvasLocation" x="1262" y="-246"/>
         </scene>
+        <!--Onboarding Navigation Controller-->
+        <scene sceneID="cQ4-mJ-K50">
+            <objects>
+                <navigationController storyboardIdentifier="PhoneNumberNavigationController" id="XCt-gw-wvO" customClass="OnboardingNavigationController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="ejw-XW-rZQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="8Qh-5S-dwB" kind="relationship" relationship="rootViewController" id="W3a-sy-mSr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mao-2H-E1A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="942" y="-1280"/>
+        </scene>
+        <!--Call Ambulance-->
+        <scene sceneID="PLE-Bs-7eU">
+            <objects>
+                <viewController storyboardIdentifier="CallAmbulanceViewController" id="8Qh-5S-dwB" customClass="CallAmbulanceViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="Call Ambulance" id="bQz-fn-fp2">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="CWp-6m-DZU">
+                            <connections>
+                                <action selector="cancelButtonTouched:" destination="8Qh-5S-dwB" id="f9E-pN-Giw"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Send" id="peT-kn-vwY">
+                            <connections>
+                                <action selector="sendButtonTouched:" destination="8Qh-5S-dwB" id="tQG-MO-D04"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="Ffb-Kg-ByV" kind="show" identifier="AmbulanceRequestedSegueId" id="1dq-j8-aQA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vzf-j0-3xd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1912" y="-1280"/>
+        </scene>
+        <!--Ambulance Sent View Controller-->
+        <scene sceneID="r2b-Al-tSm">
+            <objects>
+                <viewController id="KgA-Si-kOK" customClass="AmbulanceSentViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Thw-s6-nVg"/>
+                        <viewControllerLayoutGuide type="bottom" id="DfT-Lp-Dqe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Chp-hG-Uft">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ambulance Sent" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZb-JA-hdd">
+                                <rect key="frame" x="205" y="198" width="190" height="30"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="25"/>
+                                <color key="textColor" red="0.92941176470588238" green="0.10588235294117647" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Os1-0w-SSs">
+                                <rect key="frame" x="205" y="239" width="189.5" height="38.5"/>
+                                <string key="text">The nearest ambulance is
+heading you way</string>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ambulance_sent" translatesAutoresizingMaskIntoConstraints="NO" id="O0H-sh-bbZ">
+                                <rect key="frame" x="258" y="59" width="84" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="112" id="AXE-5x-oCI"/>
+                                    <constraint firstAttribute="width" constant="84" id="mqw-Yz-EvP"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ra2-yK-tJ4">
+                                <rect key="frame" x="241" y="297.5" width="118" height="32"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                <state key="normal" title="Cancel Request">
+                                    <color key="titleColor" red="0.92941176469999998" green="0.1019607843" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelRequestButtonTapped:" destination="KgA-Si-kOK" eventType="touchUpInside" id="7EB-ik-fif"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ra2-yK-tJ4" firstAttribute="centerX" secondItem="Chp-hG-Uft" secondAttribute="centerX" id="1VH-5j-bE0"/>
+                            <constraint firstItem="RZb-JA-hdd" firstAttribute="centerX" secondItem="Chp-hG-Uft" secondAttribute="centerX" id="2zV-KJ-MBm"/>
+                            <constraint firstItem="O0H-sh-bbZ" firstAttribute="top" secondItem="Thw-s6-nVg" secondAttribute="bottom" constant="59" id="9Q9-hE-KFI"/>
+                            <constraint firstItem="O0H-sh-bbZ" firstAttribute="centerX" secondItem="Chp-hG-Uft" secondAttribute="centerX" id="L5G-qJ-pr3"/>
+                            <constraint firstItem="ra2-yK-tJ4" firstAttribute="top" secondItem="Os1-0w-SSs" secondAttribute="bottom" constant="20" id="ORO-wd-9C7"/>
+                            <constraint firstItem="Os1-0w-SSs" firstAttribute="centerX" secondItem="Chp-hG-Uft" secondAttribute="centerX" id="Rjf-O8-xjg"/>
+                            <constraint firstItem="Os1-0w-SSs" firstAttribute="top" secondItem="RZb-JA-hdd" secondAttribute="bottom" constant="11" id="TnO-IN-BI5"/>
+                            <constraint firstItem="RZb-JA-hdd" firstAttribute="top" secondItem="O0H-sh-bbZ" secondAttribute="bottom" constant="27" id="uB2-uI-DOR"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="KwS-si-zaF">
+                        <barButtonItem key="rightBarButtonItem" title="Close" id="iqS-CB-hzX">
+                            <connections>
+                                <action selector="closeButtonTapped:" destination="KgA-Si-kOK" id="8rn-a6-JEr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bER-hm-hve" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3426" y="-1280"/>
+        </scene>
+        <!--Ambulance Requested View Controller-->
+        <scene sceneID="ex4-MC-NUm">
+            <objects>
+                <viewController id="Ffb-Kg-ByV" customClass="AmbulanceRequestedViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sQV-Jv-WU9"/>
+                        <viewControllerLayoutGuide type="bottom" id="Q8L-4V-lI4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vuC-59-hrT">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ambulance Requested" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Vq-a9-fRD">
+                                <rect key="frame" x="169" y="198" width="263" height="30"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="25"/>
+                                <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This may take a few minutes..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n1T-ki-bM3">
+                                <rect key="frame" x="188" y="239" width="223.5" height="19.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ambulance_requested" translatesAutoresizingMaskIntoConstraints="NO" id="9mA-yH-Er2">
+                                <rect key="frame" x="258" y="59" width="84" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="112" id="ZXJ-tK-DKa"/>
+                                    <constraint firstAttribute="width" constant="84" id="ie1-tL-a0J"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nA6-3R-RtH">
+                                <rect key="frame" x="240" y="297.5" width="118" height="32"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                <state key="normal" title="Cancel Request">
+                                    <color key="titleColor" red="0.92941176469999998" green="0.1019607843" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelRequestButtonTapped:" destination="Ffb-Kg-ByV" eventType="touchUpInside" id="10e-BZ-Se2"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nA6-3R-RtH" firstAttribute="top" secondItem="n1T-ki-bM3" secondAttribute="bottom" constant="39" id="7Ae-Oy-7Jl"/>
+                            <constraint firstItem="n1T-ki-bM3" firstAttribute="centerX" secondItem="vuC-59-hrT" secondAttribute="centerX" id="81i-E7-30k"/>
+                            <constraint firstItem="nA6-3R-RtH" firstAttribute="centerX" secondItem="vuC-59-hrT" secondAttribute="centerX" constant="-1" id="EBJ-JY-2zz"/>
+                            <constraint firstItem="n1T-ki-bM3" firstAttribute="top" secondItem="9Vq-a9-fRD" secondAttribute="bottom" constant="11" id="KOD-ue-3J6"/>
+                            <constraint firstItem="9Vq-a9-fRD" firstAttribute="centerX" secondItem="vuC-59-hrT" secondAttribute="centerX" id="LBS-jM-rOo"/>
+                            <constraint firstItem="9Vq-a9-fRD" firstAttribute="top" secondItem="9mA-yH-Er2" secondAttribute="bottom" constant="27" id="Ouk-x4-vYJ"/>
+                            <constraint firstItem="9mA-yH-Er2" firstAttribute="top" secondItem="sQV-Jv-WU9" secondAttribute="bottom" constant="59" id="eNC-Gm-MDe"/>
+                            <constraint firstItem="9mA-yH-Er2" firstAttribute="centerX" secondItem="vuC-59-hrT" secondAttribute="centerX" id="twO-gW-PS6"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="4uk-Tk-4fg">
+                        <barButtonItem key="rightBarButtonItem" title="Close" id="MxK-Ec-EsH">
+                            <connections>
+                                <action selector="closeButtonTapped:" destination="Ffb-Kg-ByV" id="IsB-vw-00g"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="KgA-Si-kOK" kind="show" identifier="AmbulanceSentSegueId" id="aqe-wS-w7b"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aCf-Nn-jWU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2688" y="-1280"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="ambulance_requested" width="84" height="112"/>
+        <image name="ambulance_sent" width="84" height="112"/>
+    </resources>
     <color key="tintColor" red="0.92941176470588238" green="0.10196078431372549" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
 </document>
