update s3 html file, update app name

--- a/fastlane/redcross.erb
+++ b/fastlane/redcross.erb
@@ -42,7 +42,7 @@
         font-size: 14px;
       }
       #finished { display: none; }
-      #fastlaneLogo {
+      #redcrossLogo {
         text-align: center;
         max-width: 150px;
         margin-top: 10px;
@@ -72,7 +72,7 @@
     <p id="footnote">
       This is a beta version and is not meant to share with the public. 
     </p>
-    <img src="https://app-dev.positionin.com/asset4iOS/1.png" id="rc" />
+    <img src="https://app-dev.positionin.com/asset4iOS/1.png" id="redcrossLogo" />
   </body>
 
   <script type='text/javascript'>
